--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@oada/oada-cache",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "node library for interacting with and locally caching data served on an oada-compliant server",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -w --require babel-polyfill --compilers js:babel-register test/**/*.test.js"
+    "test": "mocha -w --require babel-polyfill --compilers js:babel-register test/**/*.test.js",
+    "build": "babel server --out-dir build --presets=es2015 && webpack"
   },
   "author": "oada",
   "license": "Apache-2.0",
@@ -24,7 +25,8 @@
     "oada-id-client": "github:OADA/oada-id-client-js",
     "pouchdb": "^7.0.0",
     "url": "^0.11.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ws": "^5.2.1"
   },
   "devDependencies": {},
   "repository": {
