--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "@oada/oada-cache",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "node library for interacting with and locally caching data served on an oada-compliant server",
-  "main": "index.js",
+  "main": "./build/index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "mocha -w --require babel-polyfill --compilers js:babel-register test/**/*.test.js",
-    "build": "babel server --out-dir build --presets=es2015 && webpack"
+    "build": "babel src --require babel-polyfill --out-dir build --presets=env",
+    "prepublish": "npm run build"
   },
   "author": "oada",
   "license": "Apache-2.0",
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
