--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "isomorphic-ws": "^4.0.1",
     "json-pointer": "^0.6.0",
     "lodash": "^4.17.10",
-    "oada-id-client": "github:OADA/oada-id-client-js",
+    "oada-id-client": "OADA/oada-id-client-js",
+    "opn": "^5.3.0",
     "pouchdb": "^7.0.0",
     "url": "^0.11.0",
     "uuid": "^3.3.2",
