--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oada/oada-cache",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "description": "node library for interacting with and locally caching data served on an oada-compliant server",
   "main": "./build/index.js",
   "directories": {
@@ -15,6 +15,7 @@
   "author": "oada",
   "license": "Apache-2.0",
   "dependencies": {
+    "@oada/oada-id-client": "^1.0.0",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -28,7 +29,6 @@
     "isomorphic-ws": "^4.0.1",
     "json-pointer": "^0.6.0",
     "lodash": "^4.17.10",
-    "oada-id-client": "OADA/oada-id-client-js",
     "opn": "^5.3.0",
     "pouchdb": "^7.0.0",
     "url": "^0.11.0",
