--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@oada/oada-id-client": "^1.0.0",
     "axios": "^0.18.0",
-    "babel-cli": "^6.26.0",
+    "babel": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -27,6 +27,7 @@
     "babel-register": "^6.26.0",
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
+    "debug": "^4.1.0",
     "isomorphic-ws": "^4.0.1",
     "json-pointer": "^0.6.0",
     "lodash": "^4.17.10",
@@ -36,7 +37,9 @@
     "uuid": "^3.3.2",
     "ws": "^5.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oada/oada-cache.git"
