--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "ws": "^5.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "http-status": "^1.2.0"
   },
   "repository": {
     "type": "git",
