--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "json-pointer": "^0.6.0",
     "lodash": "^4.17.10",
     "opn": "^5.3.0",
+    "performance-now": "^2.1.0",
     "pouchdb": "^7.0.0",
     "url": "^0.11.0",
     "uuid": "^3.3.2",
