--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -w --require babel-polyfill --compilers js:babel-register test/**/*.test.js",
+    "test": "mocha --require babel-polyfill --compilers js:babel-register test/**/*.test.js",
+    "test-watch": "mocha -w --require babel-polyfill --compilers js:babel-register test/**/*.test.js",
     "build": "babel src --require babel-polyfill --out-dir build --presets=env",
     "build-watch": "babel src --watch --require babel-polyfill --out-dir build --presets=env",
     "dev": "cpx --watch --verbose './build/**' '../TrialsTracker/node_modules/@oada/oada-cache/build/'",
