--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "http-status": "^1.2.0"
+    "http-status": "^1.2.0",
+    "mocha": "^5.2.0"
   },
   "repository": {
     "type": "git",
