Added dbprefix option for oada-cache to prevent making a bunch of random directories when tests run

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "http-status": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^5.2.0"
   },
   "repository": {
