--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "eslint": "^6.5.1",
     "http-status": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "mocha-clean": "^1.0.0"
   },
   "repository": {
     "type": "git",
