--- a/package.json
+++ b/package.json
@@ -27,22 +27,12 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
     "bluebird": "^3.5.1",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
     "concurrent-queue": "^7.0.2",
     "debug": "^4.1.0",
     "isomorphic-ws": "^4.0.1",
     "json-pointer": "^0.6.0",
     "lodash": "^4.17.10",
-    "mocha": "^5.2.0",
-    "moment": "^2.22.2",
-    "opn": "^5.3.0",
-    "performance-now": "^2.1.0",
     "pouchdb": "^7.0.0",
-    "pouchdb-upsert": "^2.2.0",
-    "prettyjson": "^1.2.1",
-    "type-is": "^1.6.16",
-    "typeis": "^1.1.2",
     "url": "^0.11.0",
     "uuid": "^3.3.2",
     "ws": "^5.2.1"
@@ -53,7 +43,10 @@
     "http-status": "^1.2.0",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
-    "mocha-clean": "^1.0.0"
+    "mocha-clean": "^1.0.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "prettyjson": "^1.2.1"
   },
   "repository": {
     "type": "git",
