--- a/package.json
+++ b/package.json
@@ -7,25 +7,37 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --require babel-polyfill --compilers js:babel-register test/**/*.test.js",
-    "test-watch": "mocha -w --require babel-polyfill --compilers js:babel-register test/**/*.test.js",
-    "build": "babel src --require babel-polyfill --out-dir build --presets=env",
-    "build-watch": "babel src --watch --require babel-polyfill --out-dir build --presets=env",
+    "test": "mocha test/**/*.test.js",
+    "test-watch": "mocha -w test/**/*.test.js",
+    "build": "babel src --out-dir=build",
+    "build-watch": "babel src --out-dir=build --watch",
     "dev": "cpx --watch --verbose './build/**' '$APP_DIR/node_modules/@oada/oada-cache/build/'",
     "prepare": "npm run build"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/env",
+        {
+          "useBuiltIns": "usage"
+        }
+      ]
+    ]
+  },
+  "mocha": {
+    "require": [
+      "@babel/polyfill",
+      "@babel/register"
+    ]
   },
   "author": "oada",
   "license": "Apache-2.0",
   "dependencies": {
-    "@oada/oada-id-client": "^1.0.0",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.3",
+    "@oada/oada-id-client": "^1.0.1",
     "axios": "^0.18.0",
-    "babel": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0",
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -34,9 +46,7 @@
     "isomorphic-ws": "^4.0.1",
     "json-pointer": "^0.6.0",
     "lodash": "^4.17.10",
-    "mocha": "^5.2.0",
     "moment": "^2.22.2",
-    "opn": "^5.3.0",
     "performance-now": "^2.1.0",
     "pouchdb": "^7.0.0",
     "pouchdb-upsert": "^2.2.0",
@@ -48,9 +58,10 @@
     "ws": "^5.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
     "http-status": "^1.2.0",
-    "mocha": "^5.2.0"
+    "mocha": "^7.0.1"
   },
   "repository": {
     "type": "git",
