--- a/package.json
+++ b/package.json
@@ -2,43 +2,26 @@
   "name": "@oada/oada-cache",
   "version": "3.0.1",
   "description": "node library for interacting with and locally caching data served on an oada-compliant server",
-  "main": "./build/index.js",
+  "main": "./src/index.js",
   "directories": {
     "test": "test"
+  },
+  "mocha": {
+    "exit": true
   },
   "scripts": {
     "test": "mocha test/**/*.test.js",
     "test-watch": "mocha -w test/**/*.test.js",
-    "build": "babel src --out-dir=build",
-    "build-watch": "babel src --out-dir=build --watch",
-    "dev": "cpx --watch --verbose './build/**' '$APP_DIR/node_modules/@oada/oada-cache/build/'",
-    "prepare": "npm run build"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/env",
-        {
-          "useBuiltIns": "usage"
-        }
-      ]
-    ]
-  },
-  "mocha": {
-    "require": [
-      "@babel/polyfill",
-      "@babel/register"
-    ]
+    "dev": "cpx --watch --verbose './src/**' '$APP_DIR/node_modules/@oada/oada-cache/src/'"
   },
   "author": "oada",
   "license": "Apache-2.0",
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/register": "^7.8.3",
     "@oada/oada-id-client": "^1.0.1",
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "concurrent-queue": "^7.0.2",
     "debug": "^4.1.0",
     "isomorphic-ws": "^4.0.1",
@@ -47,13 +30,12 @@
     "moment": "^2.22.2",
     "performance-now": "^2.1.0",
     "pouchdb": "^7.0.0",
+    "prettyjson": "^1.2.1",
     "url": "^0.11.0",
     "uuid": "^3.3.2",
     "ws": "^5.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
     "http-status": "^1.2.0",
     "mocha": "^7.0.1"
   },
