--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "@oada/oada-cache",
-  "version": "3.1.0",
+  "version": "3.1.3",
   "description": "node library for interacting with and locally caching data served on an oada-compliant server",
   "main": "./src/index.js",
   "directories": {
-    "test": "test"
+    "test": "test",
+    "src": "src"
   },
   "mocha": {
     "exit": true,
-    "spec": "test/watch.test.js",
-    "file": ["./test/setup-all-tests.js"]
+    "spec": "test/**/*.test.js",
+    "file": [
+      "./test/setup-all-tests.js"
+    ]
   },
   "scripts": {
     "test": "mocha",
@@ -20,7 +23,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@oada/oada-id-client": "^1.0.1",
-    "axios": "^0.18.0",
+    "axios": "^0.19.2",
     "bluebird": "^3.5.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -35,7 +38,7 @@
     "prettyjson": "^1.2.1",
     "url": "^0.11.0",
     "uuid": "^3.3.2",
-    "ws": "^5.2.1"
+    "ws": "^7.2.1"
   },
   "devDependencies": {
     "http-status": "^1.2.0",
